2008-12-15  Jonh Wendell <jwendell@gnome.org>

	* src/vinagre-tab.c: Added minimize button to toolbar in fullscreen
	mode, closes #558596.
	* data/icons/hicolor_status_*view-minimize.png: New icons, by
	Vinicius Depizzol.

2008-12-15  Jonh Wendell <jwendell@gnome.org>

	* configure.ac: post-release bump to 2.25.3

==================== 2.25.3 ======================

2008-12-12  Jonh Wendell <jwendell@gnome.org>

	* src/vinagre-applet.c: Make applet use new bookmarks structure.

2008-12-11  Jonh Wendell <jwendell@gnome.org>

	* data/vinagre.1: New manual page, by Emilio Pozuelo Monfort and
	Halton Huo.

2008-12-11  Jonh Wendell <jwendell@gnome.org>

	* src/vinagre-main.c: Make 'vinagre --help' fully localized, by
	calling setlocale(). Patch by Takao Fujiwara. Closes #562526.

2008-12-11  Jonh Wendell <jwendell@gnome.org>

	* lots of files: Some adjusts in GObject destructors. Also removed
	some deprecated gtk+ symbols, closes #563462.

2008-12-11  Jonh Wendell <jwendell@gnome.org>

	* lots of files: Folders in bookmarks, closes #549649.
	Sorting entries alphabetically, closes #550596.

2008-11-16  Jonh Wendell <jwendell@gnome.org>

	* lots of files: Drag and drop ability: Bookmark can be added by dragging
	and dropping an tab into it. Closes #536896.

2008-11-14  Jonh Wendell <jwendell@gnome.org>

	* lots of files: Added an initial preferences dialog.

2008-11-14  Jonh Wendell <jwendell@gnome.org>

	* lots of files: Show a secondary text in all error dialogs.

2008-11-14  Jonh Wendell <jwendell@gnome.org>

	* src/vinagre-connection.[ch],
	* src/vinagre-tab.c: Better parse a .vnc file. Closes #559525.

2008-11-13  Jonh Wendell <jwendell@gnome.org>

	* src/vinagre-connection.[ch],
	* src/vinagre-tab.c,
	* data/vinagre.glade: Allow the username in the authentication schema.
	If an username is required to connect to a host, we ask it in the
	auth dialog, as long as the password. Closes #559526.

2008-11-11  Jonh Wendell <jwendell@gnome.org>
