@@ -8,7 +8,7 @@ You need the devel packages of the following libraries:
  - libglade-2.0
  - gconf-2.0
  - gnome-keyring
- - gtk-vnc widget >= 0.3.7 (http://gtk-vnc.sf.net)
+ - gtk-vnc widget >= 0.3.8 (http://sourceforge.net/projects/gtk-vnc)
  - avahi-gobject and avahi-ui >= 0.6.22
  - libpanelapplet-2.0 >= 2.0.0
 
