@@ -39,7 +39,7 @@ GTK_REQUIRED=2.13.1
 LIBGLADE_REQUIRED=2.6.0
 GCONF_REQUIRED=2.16.0
 GTHREAD_REQUIRED=2.0.0
-GTK_VNC_REQUIRED=0.3.7
+GTK_VNC_REQUIRED=0.3.8
 AVAHI_REQUIRED=0.6.22
 PANEL_REQUIRED_VERSION=2.0.0
 
