@@ -1,5 +1,10 @@
 2008-12-15  Jonh Wendell <jwendell@gnome.org>
 
+	* configure.ac: Depends on gtk-vnc 0.3.8
+	* src/vinagre-tab.c: Let scaling work on composited screens.
+
+2008-12-15  Jonh Wendell <jwendell@gnome.org>
+
 	* src/vinagre-tab.c: Added minimize button to toolbar in fullscreen
 	mode, closes #558596.
 	* data/icons/hicolor_status_*view-minimize.png: New icons, by
@@ -7,7 +12,7 @@
 
 2008-12-15  Jonh Wendell <jwendell@gnome.org>
 
-	* configure.ac: post-release bump to 2.25.3
+	* configure.ac: post-release bump to 2.25.4
 
 ==================== 2.25.3 ======================
 
